WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261898
[css-color] oklab-l-over-1-2.html fails
https://bugs.webkit.org/show_bug.cgi?id=261898
Summary
[css-color] oklab-l-over-1-2.html fails
Tim Nguyen (:ntim)
Reported
2023-09-21 11:58:25 PDT
Probably we fail to clamp in some places.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-28 11:59:12 PDT
<
rdar://problem/116195533
>
Aditya Keerthi
Comment 2
2023-12-26 09:19:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22241
EWS
Comment 3
2023-12-26 11:58:40 PST
Committed
272501@main
(359a95fee649): <
https://commits.webkit.org/272501@main
> Reviewed commits have been landed. Closing PR #22241 and removing active labels.
Aditya Keerthi
Comment 4
2023-12-26 13:25:49 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/43798
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug